# StockSight

./: .gitignore  README.md
.github/workflows/: clang_tidy.yml  update-sp500.yml
StockSight-main/frontend/: index.html
StockSight-main/frontend/src/: App.jsx  Home.jsx  index.css
StockSight-main/frontend/src/components/: Loader.jsx  StatCards.jsx
backend/: .env  CMakeLists.txt  Dockerfile  main.cpp  server  test_main.cpp
backend/include/: config.hpp  db.hpp  indicators.hpp  models.hpp  util.hpp
backend/scripts/: .env.example  check_price_data.py  cols.py  good.py  ingest.py  init_db.py  init_timescale.sql  insert_sample_data.py  test.py  test_connection.py  update_sp500.py
backend/src/: db.cpp  indicators.cpp  util.cpp
frontend/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: About.jsx  App.css  App.jsx  Favorites.jsx  Home.jsx  Results.jsx  Team.jsx  favorites.jsx  index.css
frontend/src/components/: ErrorMessage.jsx  IndicatorToggles.jsx  Navbar.jsx  PriceChart.jsx  StatCards.jsx  TickerForm.jsx
frontend/src/lib/: api.js  favorites.js
